--- a/ppg/ppg.tex
+++ b/ppg/ppg.tex
@@ -2641,8 +2641,39 @@ for (size_t i = 0; i < N; ++i) {
     \item lw \$t0, 1(\$a0) is \$t0 = Memory[\$a0+1];
     \item sw \$t0, 3(\$a0) is Memory[\$a0+3] = \$t0;
 \end{itemize}
+\item Decision making instructions:
+\begin{enumerate}
+    \item beq \$t0,\$t1,L1: branch equals to; Goto L1 if t0 and t1 are equal.
+    \item bne \$t0,\$t1,L1: branch not equals to; Goto L1 if t0 and t1 are not equal.
+\end{enumerate}
+\item The above two are used with slt: set on less than.
+\item slt \$t3,\$t1,\$t2: set t3 1 if t1 < t2, 0 otherwise.
+\item slti has a constant in place of t2 or t1.
+\begin{lstlisting}
+while(arr[i]==k){
+    i+=1;
+}
+// is converted to:
+// $ ecluded because my wrists hurt.
+/*
+//start with s3=i, s5=k, s6=&arr[0]
+loop:
+sll t1,t3,2 //i*4
+add t1,t1,s6// t1 += arr
+lw t0,0(t1)//t0 = *t1
+bne t0,s5,exit//
+addi s3,s3,1//i = i+1
+j loop
 
+exit://do nothing
+
+*/
+\end{lstlisting}
+\item The j instruction loads an immediate into PC. It can be specified as an offset or the label, and the assembler conerts the label into an offset.
+\item Skipped lectures 4,5 and 6.
 \end{itemize}
+\section{Instruction Decoding}
+
 \chapter{Javascript Notes from \href{https://www.interviewbit.com/javascript-interview-questions/}{InterviewBit}}
 \section{Data Types, typeof and instanceof from \href{https://www.w3schools.com/js/js_typeof.asp}{W3Schools}}
 \begin{itemize}
